fix the response for export
